NN-3422: - Create a new endpoint that deletes multiple appointment